# bevy_playground

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: water.gltf
benches/: water.rs
bevy_collision/: Cargo.toml
bevy_collision/src/: collider.rs
common/: Cargo.toml
common/src/: lib.rs
src/: camera.rs  delayed_despawn.rs  input.rs  main.rs  material.rs  movement.rs  render.rs  shaders.rs  unit_effects.rs  vec3_ext.rs  water.rs  world.rs
src/ai/: mod.rs  model.rs  movement.rs  spawn.rs
src/clouds/: body_of_clouds.rs  cloud.frag  cloud.vert  mod.rs
src/movement/: mod.rs  model.rs
src/particles/: mesh.rs  mod.rs  model.rs  primitives.rs  render.rs  spawn.rs
src/physics/: collider.rs  mod.rs
src/pickups/: mod.rs
src/player/: input.rs  mod.rs  model.rs
src/voxel_world/: access.rs  boundaries.rs  chunk.rs  chunk_mesh.rs  generator.rs  lod.rs  mesh.rs  mod.rs  voxel.rs  world_structure.rs
src/voxel_world/collision/: cuboid.rs  systems.rs
src/voxel_world/water/: body_of_water.rs  mod.rs  water.rs  water_effect.rs  water_mesh.rs  water_shaders.rs  water_source.rs
src/water/: body_of_water.rs  mod.rs  water_effect.rs  water_shaders.rs
src/world/: effects.rs  evaluation.rs  internal_model.rs  mod.rs  model.rs  world_gen.rs
src/world/world_gen/: mod.rs  type_decision.rs
src/world_generation/: collision.rs  mesh.rs  mod.rs  voxel.rs  voxel_world.rs  world_structure.rs
voxel/: Cargo.toml
voxel/src/: boundaries.rs  chunk.rs  effects.rs  evaluation.rs  generator.rs  lib.rs  lod.rs  mesh.rs  model.rs  prelude.rs  voxel.rs  water_simulation.rs  world_sector.rs
voxel/src/collision/: cuboid.rs  mod.rs  systems.rs
voxel/src/meshing/: consts.rs  mod.rs  operations.rs  terrain_mesh.rs  util.rs  water_mesh.rs
voxel/src/water/: body_of_water.rs  mod.rs  water.rs  water_mesh.rs  water_source.rs
voxel/src/world_gen/: height.rs  mod.rs  noise_sampler.rs  type_decision.rs
voxel/src/world_sector/: consts.rs  generic_chunk.rs  grid.rs  index_magic.rs  iteration.rs  mod.rs  pillar.rs  test.rs  water_movement.rs  water_simulation.rs
