[package]
name = "bevy_collision"
version = "0.1.0"
authors = ["Julian Bieber <julian.bieber.1992@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", version = "0.5.0", branch = "main"}
png = "0.16.7"
rand = { version = "0.8.3", features = ["small_rng"] }
lerp = "0.4.0"
ahash = "0.7"
collision = "0.20.1"
cgmath = "0.17"
flume = "0.10.1"
itertools = "0.10.0"
noise = "0.7.0"
mimalloc = "0.1.25"
strum = "0.21.0"
strum_macros = "0.21.1"

[dev-dependencies]
