[package]
name = "common"
version = "0.1.0"
authors = ["Julian Bieber <julian.bieber.1992@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", version = "0.5.0", branch = "main"}

[dev-dependencies]
